<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/image_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:contentDescription="@string/image_logo_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/ic_launcher_round"
        tools:srcCompat="@mipmap/ic_launcher_round" />

    <TextView
        android:id="@+id/textView_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/lemon"
        android:text="@string/app_name"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image_logo" />

    <Button
        android:id="@+id/button_all_books"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/button_all_books"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_name" />

    <Button
        android:id="@+id/button_currently_reading"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/button_currently_reading"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="@+id/button_all_books"
        app:layout_constraintStart_toStartOf="@+id/button_all_books"
        app:layout_constraintTop_toBottomOf="@+id/button_all_books" />

    <Button
        android:id="@+id/button_already_read"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/button_already_read"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="@+id/button_currently_reading"
        app:layout_constraintStart_toStartOf="@+id/button_currently_reading"
        app:layout_constraintTop_toBottomOf="@+id/button_currently_reading" />

    <Button
        android:id="@+id/button_wish_list"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/button_wish_list"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="@+id/button_already_read"
        app:layout_constraintStart_toStartOf="@+id/button_already_read"
        app:layout_constraintTop_toBottomOf="@+id/button_already_read" />

    <Button
        android:id="@+id/button_favorite"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/button_favorite"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="@+id/button_wish_list"
        app:layout_constraintStart_toStartOf="@+id/button_wish_list"
        app:layout_constraintTop_toBottomOf="@+id/button_wish_list" />

    <Button
        android:id="@+id/button_about"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/button_about"
        app:layout_constraintEnd_toEndOf="@+id/button_favorite"
        app:layout_constraintStart_toStartOf="@+id/button_favorite"
        app:layout_constraintTop_toBottomOf="@+id/button_favorite" />

    <TextView
        android:id="@+id/textView_license"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/textView_license"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>